tests/test168.rael.exp
Error [tests/test168.rael:1:1]: 'skip' is outside of a loop
| skip
| ^
